# deck

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deck.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/: adapters.rs  agent.rs  agent_session.rs  capabilities.rs  cli.rs  commands.rs  config.rs  config_edit.rs  context.rs  contracts.rs  discover.rs  errors.rs  history.rs  init.rs  main.rs  manifest.rs  model.rs  planner.rs  plugin.rs  process.rs  safety.rs  sandbox.rs  selection.rs  state.rs  summary.rs  tasks.rs  tools.rs  tui.rs  workflow.rs
tests/: cli.rs
